# Shanyraq.kz

./: pyproject.toml  sql_app.db
alembic/: env.py
alembic/versions/: 1a7dbf1279d4_add_relation_in_comments_and_announce.py  3b4cb540a5b0_add_announcement_table.py  75aa03537223_add_cascade_to_favorites_table.py  9f9715fd3e89_add_announcement_table.py  fc2c9444c936_add_relation_in_comments_and_announce.py
app/: main.py
app/models/: announcement_models.py  comments_models.py  favorites_models.py  users_models.py
app/repositories/: announcement_repository.py  comments_repository.py  favorites_repository.py  users_repository.py
