[tool.poetry]
name = "shanyraq-kz"
version = "0.1.0"
description = ""
authors = ["Mukagali <mukgaly.omirzak2003@gmail.com>"]
readme = "README.md"
packages = [{include = "shanyraq"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
sqlalchemy = "^2.0.19"
uvicorn = "^0.23.1"
attrs = "^23.1.0"
alembic = "^1.11.1"
python-jose = "^3.3.0"
jwt = "^1.3.1"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
